--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -80,7 +80,7 @@
 <p>抽查影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
 <hr/>
-<p>week7</p>
+<p><strong><big><big>week7工作分配討論</big></big></strong></p>
 <p><span>協同產品設計實習 Assignment 2 工作分配與問題討論</span></p>
 <div class="trpContentPanel" id="content-wrapper">
 <div class="trpChatPanel">
@@ -121,13 +121,13 @@
 <p>課堂抽查直播影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-2HgGF__3qQ" width="500"></iframe></p>
 <hr/>
-<p>week 8 更新 v-rep </p>
+<p><strong><big><big>week 8 更新 v-rep </big></big></strong></p>
 <p>1.進入CoppliaSim 官方網站:<a href="https://www.coppeliarobotics.com/">https://www.coppeliarobotics.com/</a></p>
 <p>2.進入download 中下載教育版</p>
 <p>3.下載<a href="https://www.coppeliarobotics.com/files/CoppeliaSim_Edu_V4_0_0_Win.zip">CoppeliaSim Edu Binaries</a>可攜版本</p>
 <p>4.完成上述步驟即可刪除原本的V rep</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0QdJDDxGBIY" width="500"></iframe></p>
-<p>python remote api 環境參數設置</p>
+<p><strong><big><big>python remote api 環境參數設置</big></big></strong></p>
 <p>在Y槽中輸入pip install python imutils opencv-python 即可設置完成</p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
