--- a/content/week6-10.html
+++ b/content/week6-10.html
@@ -207,7 +207,121 @@ img.add_border {
 <p>4.完成上述步驟即可刪除原本的V rep</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0QdJDDxGBIY" width="500"></iframe></p>
 <p><strong><big><big>python remote api 環境參數設置</big></big></strong></p>
-<p>在Y槽中輸入pip install python imutils opencv-python 即可設置完成</p><br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
+<p>在Y槽中輸入pip install python imutils opencv-python 即可設置完成</p>
+<hr/>
+<p><big><big>week9</big></big></p>
+<p><img alt="" height="674" src="./../images/Capture.PNG" width="1000"/></p>
+<p>由於Linux是Unix底下的其中一個分支，所以兩者指令極其相似</p>
+<p>以下為Unix 與 MS-DOS指令對照表</p>
+<table role="table">
+<tbody>
+<tr></tr>
+<tr>
+<th>Unix</th>
+<th>Windows CMD / MS-DOS</th>
+<th>說明</th>
+</tr>
+<tr>
+<td>cd</td>
+<td>cd / chdir</td>
+<td>改變工作目錄</td>
+</tr>
+<tr>
+<td>ls</td>
+<td>　dir</td>
+<td>列出目錄內容</td>
+</tr>
+<tr>
+<td>man</td>
+<td>　help 　</td>
+<td>顯示(指令)說明</td>
+</tr>
+<tr>
+<td>mkdir</td>
+<td>md / mkdir</td>
+<td>新增資料夾</td>
+</tr>
+<tr>
+<td>cp</td>
+<td>copy / xcopy</td>
+<td>複製檔案</td>
+</tr>
+<tr>
+<td>mv</td>
+<td>ren / rename</td>
+<td>重新命名檔案</td>
+</tr>
+<tr>
+<td>mv</td>
+<td>　move 　</td>
+<td>移動檔案或目錄</td>
+</tr>
+<tr>
+<td>rm</td>
+<td>del / erase</td>
+<td>刪除檔案或目錄</td>
+</tr>
+<tr>
+<td>　</td>
+<td>　tree 　</td>
+<td>顯示目錄的樹狀結構</td>
+</tr>
+<tr>
+<td><a href="https://en.wikipedia.org/wiki/Ifconfig" rel="nofollow">ifconfig</a></td>
+<td><a href="https://en.wikipedia.org/wiki/Ipconfig" rel="nofollow">ipconfig</a></td>
+<td>網路連線的設定</td>
+</tr>
+<tr>
+<td><a href="https://en.wikipedia.org/wiki/Netstat" rel="nofollow">netstat</a></td>
+<td>netstat</td>
+<td>顯示通訊協定統計資料和目前的 TCP/IP 網路連線</td>
+</tr>
+<tr>
+<td><a href="https://en.wikipedia.org/wiki/Ps_(Unix)" rel="nofollow">ps</a></td>
+<td><a href="https://en.wikipedia.org/wiki/Tasklist" rel="nofollow">tasklist</a></td>
+<td>display the currently-running processes</td>
+</tr>
+<tr>
+<td><a href="https://zh.wikipedia.org/wiki/Ln_(Unix)" rel="nofollow">ln</a></td>
+<td>fsutil, junction, linkd,<span> </span><a href="https://en.wikipedia.org/wiki/NTFS_symbolic_link" rel="nofollow">mklink</a></td>
+<td>新增符號連結(<a href="https://en.wikipedia.org/wiki/Symbolic_link" rel="nofollow">symbolic link</a>)</td>
+</tr>
+<tr>
+<td><a href="https://en.wikipedia.org/wiki/Fsck" rel="nofollow">fsck</a></td>
+<td><a href="https://en.wikipedia.org/wiki/CHKDSK" rel="nofollow">chkdsk</a>/<a href="https://en.wikipedia.org/wiki/Microsoft_ScanDisk" rel="nofollow">scandisk</a></td>
+<td>Check Disk，磁碟檢查</td>
+</tr>
+<tr>
+<td>fdisk/<a href="https://en.wikipedia.org/wiki/GNU_Parted" rel="nofollow">parted</a></td>
+<td>　<a href="https://en.wikipedia.org/wiki/Fdisk" rel="nofollow">fdisk</a><span> </span>/<span> </span><a href="https://en.wikipedia.org/wiki/Diskpart" rel="nofollow">diskpart</a></td>
+<td>磁碟分割</td>
+</tr>
+<tr>
+<td><a href="https://en.wikipedia.org/wiki/Mkfs" rel="nofollow">mkfs</a></td>
+<td>　<a href="https://en.wikipedia.org/wiki/Format_(command)" rel="nofollow">format</a></td>
+<td>格式化磁碟</td>
+</tr>
+<tr>
+<td>　</td>
+<td><a href="https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/compact" rel="nofollow">compact</a></td>
+<td>NTFS 壓縮</td>
+</tr>
+<tr>
+<td>　</td>
+<td>　<a href="https://docs.microsoft.com/en-us/windows-hardware/drivers/devtest/pnputil" rel="nofollow">PnPUtil</a><span> </span>　</td>
+<td><a href="https://web.archive.org/web/20170729130525/http://www.cfan.com.cn/2016/0927/127383.shtml" rel="nofollow">驅動管理</a></td>
+</tr>
+<tr>
+<td><a href="https://en.wikipedia.org/wiki/Exit_(command)" rel="nofollow">exit</a></td>
+<td>　exit</td>
+<td></td>
+</tr>
+<tr>
+<td><a href="https://en.wikipedia.org/wiki/Shutdown_(computing)" rel="nofollow">shutdown</a></td>
+<td>　shutdown</td>
+</tr>
+</tbody>
+</table><br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
         
     <!-- footer -->
       <div class="container">
