--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -19,7 +19,7 @@
 <blockquote>2.所有資料來源都來自http，也就是說輸出URL都在http，記得更改不要只有更             Dart的URL</blockquote>
 </blockquote>
 <blockquote>
-<blockquote>3.乙班名單<a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780 </a>                              <a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="550"></iframe></blockquote>
+<blockquote>3.乙班名單<a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a>  <a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="550"></iframe></blockquote>
 </blockquote>
 <hr/>
 <p>week3.4</p>
@@ -51,8 +51,9 @@
 <ul>
 <li>安裝python <span>時先不要安裝</span>pip<span>檔，若是將</span>pip<span>檔打勾那下載下來</span>python 3.8.exe<span>裡面就會有</span>pip<span>檔</span></li>
 <li>安裝好沒有pip<span>檔的</span>python <span>之後再輸入</span>python -m pip install</li>
-<li>安裝軟體包 python pip install<span style="background-color: #ffffff; color: #ff0000;"> Flask Mardown lxml bs4 flask_cors pelican leo</span></li>
+<li>安裝軟體包 python pip install<span style="background-color: #ffffff; color: #ff0000;"> Flask Mardown lxml bs4 flask_cors pelican leo</span><span style="background-color: #ffffff; color: #ff0000;"></span></li>
 </ul>
+<p><span style="background-color: #ffffff; color: #ff0000;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nW1_UM_VtBE" width="500"></iframe></span></p>
 <p><strong><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf" target="_blank"> simulation translation 翻譯四輪車</a></strong></p>
 <p><big><big>分組報告</big></big></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/r0AABAp474U" width="550"></iframe></p>
@@ -128,7 +129,11 @@
 <p>4.完成上述步驟即可刪除原本的V rep</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0QdJDDxGBIY" width="500"></iframe></p>
 <p><strong><big><big>python remote api 環境參數設置</big></big></strong></p>
-<p>在Y槽中輸入pip install python imutils opencv-python 即可設置完成</p><h1>notes</h1>
+<p>在Y槽中輸入pip install python imutils opencv-python 即可設置完成</p>
+<hr/>
+<p><big><big>week9</big></big></p>
+<p><img alt="" height="674" src="/images/Capture.PNG" width="1000"/></p>
+<p>由於Linux是Unix底下的其中一個分支，所以兩者指令極其相似</p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
