--- a/content/Dart.html
+++ b/content/Dart.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,11 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">notes << <a href='notes.html'>Previous</a> <a href='overview.html'>Next</a> >> overview<br /><h1>Dart</h1>
+    <div id="tipue_search_content">notes << <a href='notes.html'>Previous</a> <a href='object orientend  programming(OOP).html'>Next</a> >> object orientend  programming(OOP)<br /><h1>Dart</h1>
+<p>object oriented programming </p>
 <p><a href="https://s40723212.github.io/cd2020/content/overview.html" target="_blank">overview</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/environment.html" target="_blank">environment</a></p>
 <p></p>
-<p></p><br />notes << <a href='notes.html'>Previous</a> <a href='overview.html'>Next</a> >> overview</div>
+<p></p><br />notes << <a href='notes.html'>Previous</a> <a href='object orientend  programming(OOP).html'>Next</a> >> object orientend  programming(OOP)</div>
         
     <!-- footer -->
       <div class="container">
