--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -133,13 +133,139 @@
 <hr/>
 <p><big><big>week9</big></big></p>
 <p><img alt="" height="674" src="/images/Capture.PNG" width="1000"/></p>
-<p>由於Linux是Unix底下的其中一個分支，所以兩者指令極其相似</p><h1>notes</h1>
+<p>由於Linux是Unix底下的其中一個分支，所以兩者指令極其相似</p>
+<p>以下為Unix 與 MS-DOS指令對照表</p>
+<table role="table" style="width: 528px;">
+<tbody>
+<tr></tr>
+<tr>
+<th style="width: 121.6px;">Unix</th>
+<th style="width: 236.4px;">Windows CMD / MS-DOS</th>
+<th style="width: 168px;">說明</th>
+</tr>
+<tr>
+<td style="width: 121.6px;">cd</td>
+<td style="width: 236.4px;">cd / chdir</td>
+<td style="width: 168px;">改變工作目錄</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">ls</td>
+<td style="width: 236.4px;">　dir</td>
+<td style="width: 168px;">列出目錄內容</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">man</td>
+<td style="width: 236.4px;">　help 　</td>
+<td style="width: 168px;">顯示(指令)說明</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">mkdir</td>
+<td style="width: 236.4px;">md / mkdir</td>
+<td style="width: 168px;">新增資料夾</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">cp</td>
+<td style="width: 236.4px;">copy / xcopy</td>
+<td style="width: 168px;">複製檔案</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">mv</td>
+<td style="width: 236.4px;">ren / rename</td>
+<td style="width: 168px;">重新命名檔案</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">mv</td>
+<td style="width: 236.4px;">　move 　</td>
+<td style="width: 168px;">移動檔案或目錄</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">rm</td>
+<td style="width: 236.4px;">del / erase</td>
+<td style="width: 168px;">刪除檔案或目錄</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">　</td>
+<td style="width: 236.4px;">　tree 　</td>
+<td style="width: 168px;">顯示目錄的樹狀結構</td>
+</tr>
+<tr>
+<td style="width: 121.6px;"><a href="https://en.wikipedia.org/wiki/Ifconfig" rel="nofollow">ifconfig</a></td>
+<td style="width: 236.4px;"><a href="https://en.wikipedia.org/wiki/Ipconfig" rel="nofollow">ipconfig</a></td>
+<td style="width: 168px;">網路連線的設定</td>
+</tr>
+<tr>
+<td style="width: 121.6px;"><a href="https://en.wikipedia.org/wiki/Netstat" rel="nofollow">netstat</a></td>
+<td style="width: 236.4px;">netstat</td>
+<td style="width: 168px;">顯示通訊協定統計資料和目前的 TCP/IP 網路連線</td>
+</tr>
+<tr>
+<td style="width: 121.6px;"><a href="https://en.wikipedia.org/wiki/Ps_(Unix)" rel="nofollow">ps</a></td>
+<td style="width: 236.4px;"><a href="https://en.wikipedia.org/wiki/Tasklist" rel="nofollow">tasklist</a></td>
+<td style="width: 168px;">display the currently-running processes</td>
+</tr>
+<tr>
+<td style="width: 121.6px;"><a href="https://zh.wikipedia.org/wiki/Ln_(Unix)" rel="nofollow">ln</a></td>
+<td style="width: 236.4px;">fsutil, junction, linkd,<span> </span><a href="https://en.wikipedia.org/wiki/NTFS_symbolic_link" rel="nofollow">mklink</a></td>
+<td style="width: 168px;">新增符號連結(<a href="https://en.wikipedia.org/wiki/Symbolic_link" rel="nofollow">symbolic link</a>)</td>
+</tr>
+<tr>
+<td style="width: 121.6px;"><a href="https://en.wikipedia.org/wiki/Fsck" rel="nofollow">fsck</a></td>
+<td style="width: 236.4px;"><a href="https://en.wikipedia.org/wiki/CHKDSK" rel="nofollow">chkdsk</a>/<a href="https://en.wikipedia.org/wiki/Microsoft_ScanDisk" rel="nofollow">scandisk</a></td>
+<td style="width: 168px;">Check Disk，磁碟檢查</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">fdisk/<a href="https://en.wikipedia.org/wiki/GNU_Parted" rel="nofollow">parted</a></td>
+<td style="width: 236.4px;">　<a href="https://en.wikipedia.org/wiki/Fdisk" rel="nofollow">fdisk</a><span> </span>/<span> </span><a href="https://en.wikipedia.org/wiki/Diskpart" rel="nofollow">diskpart</a></td>
+<td style="width: 168px;">磁碟分割</td>
+</tr>
+<tr>
+<td style="width: 121.6px;"><a href="https://en.wikipedia.org/wiki/Mkfs" rel="nofollow">mkfs</a></td>
+<td style="width: 236.4px;">　<a href="https://en.wikipedia.org/wiki/Format_(command)" rel="nofollow">format</a></td>
+<td style="width: 168px;">格式化磁碟</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">　</td>
+<td style="width: 236.4px;"><a href="https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/compact" rel="nofollow">compact</a></td>
+<td style="width: 168px;">NTFS 壓縮</td>
+</tr>
+<tr>
+<td style="width: 121.6px;">　</td>
+<td style="width: 236.4px;">　<a href="https://docs.microsoft.com/en-us/windows-hardware/drivers/devtest/pnputil" rel="nofollow">PnPUtil</a><span> </span>　</td>
+<td style="width: 168px;"><a href="https://web.archive.org/web/20170729130525/http://www.cfan.com.cn/2016/0927/127383.shtml" rel="nofollow">驅動管理</a></td>
+</tr>
+<tr>
+<td style="width: 121.6px;"><a href="https://en.wikipedia.org/wiki/Exit_(command)" rel="nofollow">exit</a></td>
+<td style="width: 236.4px;">　exit</td>
+<td style="width: 168px;"></td>
+</tr>
+<tr>
+<td style="width: 121.6px;"><a href="https://en.wikipedia.org/wiki/Shutdown_(computing)" rel="nofollow">shutdown</a></td>
+<td style="width: 236.4px;">　shutdown</td>
+</tr>
+</tbody>
+</table>
+<p></p>
+<p>參考資料:<a href="https://zh.wikipedia.org/wiki/UNIX">https://zh.wikipedia.org/wiki/UNIX</a></p>
+<p><a href="https://ithelp.ithome.com.tw/articles/10210448">https://ithelp.ithome.com.tw/articles/10210448</a></p>
+<p><a href="https://github.com/shyangs/blog/issues/8">https://github.com/shyangs/blog/issues/8</a></p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
+<p>object oriented programming </p>
 <p><a href="https://s40723212.github.io/cd2020/content/overview.html" target="_blank">overview</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/environment.html" target="_blank">environment</a></p>
 <p></p>
+<p></p><h3>object orientend  programming</h3>
+<p>Dart is an object oriented programming language.Object Orientation is a software development paradigm that follows real world modeling and it also considers a prigram as an collection of objects that commumicate with each other via mechanism called methods.</p>
+<p>In OOP we can distinguish in three topic:</p>
+<p><strong>Object - </strong>An object is a real-time representation of any tiny. As per Grady Brooch, every object must have three features-</p>
+<ul>
+<li>State - Desbribed by the attributes of an object.</li>
+<li>Behavior - Describes how the object will act.</li>
+<li>Identity - A unique value the distinguishes an object from a set of similar such objects.</li>
+</ul>
+<p><strong>Class - </strong>A class in terms of OOP is a blueprint for creating objects. A class encapsulates data for the object.</p>
+<p><strong>Method - </strong>Methods facilitate communication between objects.</p>
 <p></p><h3>overview</h3>
 <p>Dart is an object-orented langule with C styie syntax which can optionally trans compile into Javascript.<br/>Dart 是一種物基於C語法所產稱的件導向語言，其功能可將其語言轉換成Javascript</p>
 <p><span>compares the features of Dart and JavaScript.</span><br/>下表為Dart跟Javascript的差異比較</p>
@@ -171,8 +297,7 @@
 <td>Yes, with HTML5 web workers</td>
 </tr>
 </tbody>
-</table>
-<h3>environment</h3>
+</table><h3>environment</h3>
 <p><big><big>Executing Script Online-Dartpad</big></big></p>
 <p><big><a href="https://dartpad.dartlang.org/html" target="_blank">DartPad</a></big></p>
 <p><span>The Dart Editor executes the script and displays both HTML as well as console output. The online editor is shipped with a set of preset code samples.</span></p>
