Dart data types

--- a/content/About.html
+++ b/content/About.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -155,7 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Class << <a href='Class.html'>Previous</a> <br /><h1>About</h1>
-<p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p><br />Class << <a href='Class.html'>Previous</a> </div>
+<p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p></div></div></div><br />Class << <a href='Class.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
