--- a/content/Data types.html
+++ b/content/Data types.html
@@ -154,10 +154,31 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='week1-5.html'>Next</a> >> week1-5<br /><h1>weeks</h1>
-<p><a href="https://s40723212.github.io/cd2020/content/week1-5.html">week1-5</a></p>
-<p><a href="https://s40723212.github.io/cd2020/content/week6-10.html">week6-10</a></p>
-<br /> <a href='week1-5.html'>Next</a> >> week1-5</div>
+    <div id="tipue_search_content">environment << <a href='environment.html'>Previous</a> <a href='Class.html'>Next</a> >> Class<br /><h1>Data types</h1>
+<p>The Dart language supports the following types-</p>
+<ul>
+<li>Numbers</li>
+<li>Strings</li>
+<li>Booleans</li>
+<li>Lists</li>
+<li>Maps</li>
+</ul>
+<p><strong><big><big>Numbers</big></big></strong></p>
+<p>Numbers in Dart can be divided in two ways.</p>
+<ul>
+<li><strong>Interger</strong> - Intergers values represent non fractional values.</li>
+<li><strong>Double</strong> - Dart also supports fractional numeric. The Double data type in Dart represents a 64-bit(double - precision) floating-point number.</li>
+</ul>
+<p><big><big><strong>String</strong> </big></big></p>
+<p>Strings represent a sequence of characters. A Dart string is a sequence of UTF-16 code units.<span> </span><b>Runes</b><span> </span>are used to represent a sequence of UTF-32 code units.</p>
+<p>The keyword<span> </span><b>String</b><span> </span>is used to represent string literals. String values are embedded in either single or double quotes.</p>
+<p><strong><big><big>Boolean </big></big></strong></p>
+<p>In dart Boolean values are data types that represents ture and false.</p>
+<p><strong><big><big>Lists and Maps</big></big></strong></p>
+<p><span>The data types list and map are used to represent a collection of objects. A </span><b>List</b><span><span> </span>is an ordered group of objects. The List data type in Dart is synonymous to the concept of an array in other programming languages. The<span> </span></span><b>Map</b><span><span> </span>data type represents a set of values as key-value pairs. The<span> </span></span><b>dart: core</b><span><span> </span>library enables creation and manipulation of these collections through the predefined List and Map classes respectively.</span></p>
+<p><strong><big><big>Dynamic</big></big></strong></p>
+<p><span>If the type of a variable is not explicitly specified, the variable’s type is <b>dynamic</b><span>. The<span> </span></span><b>dynamic</b><span><span> </span>keyword can also be used as a type annotation explicitly.</span></span></p>
+<p></p><br />environment << <a href='environment.html'>Previous</a> <a href='Class.html'>Next</a> >> Class</div>
         
     <!-- footer -->
       <div class="container">
