--- a/config/content.htm
+++ b/config/content.htm
@@ -247,7 +247,29 @@
 <p></p>
 <p>參考資料:<a href="https://zh.wikipedia.org/wiki/UNIX">https://zh.wikipedia.org/wiki/UNIX</a></p>
 <p><a href="https://ithelp.ithome.com.tw/articles/10210448">https://ithelp.ithome.com.tw/articles/10210448</a></p>
-<p><a href="https://github.com/shyangs/blog/issues/8">https://github.com/shyangs/blog/issues/8</a></p><h1>notes</h1>
+<p><a href="https://github.com/shyangs/blog/issues/8">https://github.com/shyangs/blog/issues/8</a></p>
+<hr/>
+<p><strong><big><big>week10 分組直播</big></big></strong></p>
+<p><img caption="false" height="215" src="/images/分組.PNG" width="550"/></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GmKxlNPx-gs" width="500"></iframe></p>
+<p><strong><big><big>設定google pip</big></big></strong></p>
+<ol>
+<li>Login to your @gm account</li>
+<li>Link to<span> </span><a href="https://console.developers.google.com/">https://console.developers.google.com</a></li>
+<li>Accept the license and  create Google API project</li>
+<li>Enable Google + Domain API</li>
+<li>Under Google + Domain API credentials, press CONFIGURE CONSENT SCREEN button</li>
+<li>Select Internal or External user type and add a new application name</li>
+<li>Under API and Services, enter into Credentials page</li>
+<li>Create "<span _ngcontent-ith-c126="" class="cfc-table-title ng-star-inserted" id="cfc-table-caption-1" role="presentation">OAuth 2.0 Client IDs" type credential for Web Application</span></li>
+<li>Authorized JavaScript origins:<span> </span><a href="https://localhost:8443/">https://localhost:8443</a></li>
+<li>Authorized redirect URIs:<span> </span><a href="https://localhost:8443/login/google/">https://localhost:8443/login/google/</a></li>
+<li>Save your Client ID and Client secret into oauth_gm.txt</li>
+</ol>
+<p><strong><big><big>實作影片</big></big></strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gYMqfnsto7Q" width="500"></iframe></strong></p>
+<p><strong><big><big>測試影片</big></big></strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
