--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -247,14 +247,20 @@
 <p></p>
 <p>參考資料:<a href="https://zh.wikipedia.org/wiki/UNIX">https://zh.wikipedia.org/wiki/UNIX</a></p>
 <p><a href="https://ithelp.ithome.com.tw/articles/10210448">https://ithelp.ithome.com.tw/articles/10210448</a></p>
-<p><a href="https://github.com/shyangs/blog/issues/8">https://github.com/shyangs/blog/issues/8</a></p><h1>notes</h1>
+<p><a href="https://github.com/shyangs/blog/issues/8">https://github.com/shyangs/blog/issues/8</a></p>
+<hr/>
+<p><strong><big><big>week10 分組直播</big></big></strong></p>
+<p><img caption="false" height="215" src="/images/分組.PNG" width="550"/></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GmKxlNPx-gs" width="500"></iframe></p>
+<p><strong><big><big>設定google pip</big></big></strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
 <p>object oriented programming </p>
 <p><a href="https://s40723212.github.io/cd2020/content/overview.html" target="_blank">overview</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/environment.html" target="_blank">environment</a></p>
-<p></p>
+<p>Data types</p>
 <p></p><h3>object orientend  programming(OOP)</h3>
 <p>Dart is an object oriented programming language.Object Orientation is a software development paradigm that follows real world modeling and it also considers a prigram as an collection of objects that commumicate with each other via mechanism called methods.</p>
 <p>In OOP we can distinguish in three topic:</p>
