--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,8 @@
 <h1>weeks</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/week1-5.html">week1-5</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/week6-10.html">week6-10</a></p>
-<h2>week1-5</h2>
+<p>week11-18</p>
+<p></p><h2>week1-5</h2>
 <p>week1</p>
 <blockquote>1.新建個人倉儲</blockquote>
 <blockquote>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git">https://github.com/mdecourse/cmsimde.git </a>導入個人倉儲</blockquote>
@@ -253,7 +254,24 @@
 <p><img caption="false" height="215" src="/images/分組.PNG" width="550"/></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GmKxlNPx-gs" width="500"></iframe></p>
 <p><strong><big><big>設定google pip</big></big></strong></p>
-<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p><h1>notes</h1>
+<ol>
+<li>Login to your @gm account</li>
+<li>Link to<span> </span><a href="https://console.developers.google.com/">https://console.developers.google.com</a></li>
+<li>Accept the license and  create Google API project</li>
+<li>Enable Google + Domain API</li>
+<li>Under Google + Domain API credentials, press CONFIGURE CONSENT SCREEN button</li>
+<li>Select Internal or External user type and add a new application name</li>
+<li>Under API and Services, enter into Credentials page</li>
+<li>Create "<span _ngcontent-ith-c126="" class="cfc-table-title ng-star-inserted" id="cfc-table-caption-1" role="presentation">OAuth 2.0 Client IDs" type credential for Web Application</span></li>
+<li>Authorized JavaScript origins:<span> </span><a href="https://localhost:8443/">https://localhost:8443</a></li>
+<li>Authorized redirect URIs:<span> </span><a href="https://localhost:8443/login/google/">https://localhost:8443/login/google/</a></li>
+<li>Save your Client ID and Client secret into oauth_gm.txt</li>
+</ol>
+<p><strong><big><big>實作影片</big></big></strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gYMqfnsto7Q" width="500"></iframe></strong></p>
+<p><strong><big><big>測試影片</big></big></strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p>
+<h2><strong>week11</strong></h2><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
