--- a/content/index.html
+++ b/content/index.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a><li><a href='week11-week18.html'>week11-week18</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -157,7 +157,8 @@ img.add_border {
     <div id="tipue_search_content"> <a href='week1-5.html'>Next</a> >> week1-5<br /><h1>weeks</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/week1-5.html">week1-5</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/week6-10.html">week6-10</a></p>
-<br /> <a href='week1-5.html'>Next</a> >> week1-5</div>
+<p>week11-18</p>
+<p></p><br /> <a href='week1-5.html'>Next</a> >> week1-5</div>
         
     <!-- footer -->
       <div class="container">
