--- a/content/week6-10.html
+++ b/content/week6-10.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a><li><a href='week11-week18.html'>week11-week18</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week1-5 << <a href='week1-5.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week6-10</h1>
+    <div id="tipue_search_content">week1-5 << <a href='week1-5.html'>Previous</a> <a href='week11-week18.html'>Next</a> >> week11-week18<br /><h1>week6-10</h1>
 <p>week6</p>
 <p>抽查影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
@@ -347,7 +347,8 @@ img.add_border {
 <p><strong><big><big>實作影片</big></big></strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gYMqfnsto7Q" width="500"></iframe></strong></p>
 <p><strong><big><big>測試影片</big></big></strong></p>
-<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p><br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p>
+<br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='week11-week18.html'>Next</a> >> week11-week18</div>
         
     <!-- footer -->
       <div class="container">
