--- a/content/index.html
+++ b/content/index.html
@@ -157,7 +157,7 @@ img.add_border {
     <div id="tipue_search_content"> <a href='week1-5.html'>Next</a> >> week1-5<br /><h1>weeks</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/week1-5.html">week1-5</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/week6-10.html">week6-10</a></p>
-<p>week11-18</p>
+<p><a href="https://s40723212.github.io/cd2020/content/week11-week18.html" target="_blank">week11-18</a></p>
 <p></p><br /> <a href='week1-5.html'>Next</a> >> week1-5</div>
         
     <!-- footer -->
