ubuntu 設定IPV4 無法啟動近端

--- a/config/content.htm
+++ b/config/content.htm
@@ -368,5 +368,6 @@
 <p><strong><big><big>Dynamic</big></big></strong></p>
 <p><span>If the type of a variable is not explicitly specified, the variable’s type is <b>dynamic</b><span>. The<span> </span></span><b>dynamic</b><span><span> </span>keyword can also be used as a type annotation explicitly.</span></span></p>
 <p></p><h2>Class</h2>
-<h1>About</h1>
+<p>ubuntu 設定IPV4 無法啟動近端</p>
+<p><img alt="" height="359" src="/images/ununtu IP4近端無法啟動.PNG" width="500"/></p><h1>About</h1>
 <p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p></div></div></div>
