--- a/content/week11-week18.html
+++ b/content/week11-week18.html
@@ -154,38 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">object orientend  programming(OOP) << <a href='object orientend  programming(OOP).html'>Previous</a> <a href='environment.html'>Next</a> >> environment<br /><h1>overview</h1>
-<p>Dart is an object-orented langule with C styie syntax which can optionally trans compile into Javascript.<br/>Dart 是一種物基於C語法所產稱的件導向語言，其功能可將其語言轉換成Javascript</p>
-<p><span>compares the features of Dart and JavaScript.</span><br/>下表為Dart跟Javascript的差異比較</p>
-<table class="table table-bordered">
-<tbody>
-<tr>
-<th>Feature</th>
-<th>Dart</th>
-<th>JavaScript</th>
-</tr>
-<tr>
-<td>Type system</td>
-<td>Optional, dynamic</td>
-<td>Weak, dynamic</td>
-</tr>
-<tr>
-<td>Classes</td>
-<td>Yes, single inheritance</td>
-<td>Prototypical</td>
-</tr>
-<tr>
-<td>Interfaces</td>
-<td>Yes, multiple interfaces</td>
-<td>No</td>
-</tr>
-<tr>
-<td>Concurrency</td>
-<td>Yes, with isolates</td>
-<td>Yes, with HTML5 web workers</td>
-</tr>
-</tbody>
-</table><br />object orientend  programming(OOP) << <a href='object orientend  programming(OOP).html'>Previous</a> <a href='environment.html'>Next</a> >> environment</div>
+    <div id="tipue_search_content">week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week11-week18</h1><br />week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
         
     <!-- footer -->
       <div class="container">
