--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -271,9 +271,6 @@
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gYMqfnsto7Q" width="500"></iframe></strong></p>
 <p><strong><big><big>測試影片</big></big></strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p>
-<<<<<<< HEAD
-<h2>week11-week18</h2><h1>notes</h1>
-=======
 <h2>week11-week18</h2>
 <p>week11</p>
 <p>week12</p>
@@ -283,7 +280,6 @@
 <p>week16</p>
 <p>week17</p>
 <p>week18</p><h1>notes</h1>
->>>>>>> 4dd657ae8966ba98d706d66a7abf0c00def96d05
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
@@ -380,5 +376,6 @@
 <p><strong><big><big>Dynamic</big></big></strong></p>
 <p><span>If the type of a variable is not explicitly specified, the variable’s type is <b>dynamic</b><span>. The<span> </span></span><b>dynamic</b><span><span> </span>keyword can also be used as a type annotation explicitly.</span></span></p>
 <p></p><h2>Class</h2>
-<h1>About</h1>
+<p>ubuntu 設定IPV4 無法啟動近端</p>
+<p><img alt="" height="359" src="/images/ununtu IP4近端無法啟動.PNG" width="500"/></p><h1>About</h1>
 <p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p></div></div></div>
